@@ -49,7 +49,7 @@ class ServletUnitHttpResponse implements HttpServletResponse {
     private Locale _locale = Locale.getDefault();
 
     /** The Constant ENCODING_MAP. */
-    private static final Hashtable ENCODING_MAP = new Hashtable<>();
+    private static final java.util.Map ENCODING_MAP = new java.util.HashMap<>();
 
     /**
      * Adds the specified cookie to the response. It can be called multiple times to set more than one cookie.
@@ -582,7 +582,7 @@ class ServletUnitHttpResponse implements HttpServletResponse {
     private String _statusMessage = "OK";
 
     /** The headers. */
-    private final Hashtable _headers = new Hashtable<>();
+    private final java.util.Hashtable _headers = new com.meterware.httpunit.WebClient.HeaderDictionary();
 
     /** The headers complete. */
     private boolean _headersComplete;
@@ -659,7 +659,7 @@ class ServletUnitHttpResponse implements HttpServletResponse {
             values = (ArrayList) _headers.get(name.toUpperCase());
         }
         if (values == null) {
-            return Collections.emptyList();
+            return List.of();
         }
         return values;
     }
